# swe-tech-test

./: .gitignore  AGENTS.md  README.md  TEST_DESCRIPTION.md  alias.sh  generate_mock_recording.py  pyproject.toml  report.md  spec.md
notebooks/: data_description.ipynb
recordings/: README.md
src/backend/app/: main.py
src/frontend/: package.json
src/frontend/public/: index.html
src/frontend/src/: App.css  App.js
src/frontend/src/app/: layout.js  page.js  page.module.css
src/frontend/src/app/components/: D3Visualization.js  DeckVisualization.js
tests/: test_backend.py  test_integration.py
vibe/: .env  README.md  docker-compose.yml  dockerfile
