[project]
name = "swe-tech-test"
version = "0.1.0"
description = "swe tech test"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pydantic>=2.13.0",
    "pytest>=9.0.3",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "ruff>=0.15.10",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.44.0",
    "zarr>=3.1.6",
]

[project.scripts]
serve = "backend.app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
